--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -4,20 +4,20 @@ body{
 }
 
 header{
-	back-ground-color: black;
+	background-color: black;
 	grid-column: 1/4;
 }
 
 
 main{
 	grid-column:1/3;
-	back-ground-color: gray;
+	background-color: gray;
 	color:orange;
 }
 
 aside{
 	grid-column:3/4;
-	back-ground-color: navy;
+	background-color: navy;
 }
 nav{
 	display: flex;
@@ -29,6 +29,6 @@ nav a{
 
 footer{
 	grid-column:1/4;
-	back-ground-color: black;
+	background-color: black;
 	color: white;
 }
