--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -6,6 +6,9 @@ body{
 header{
 	background-color: black;
 	grid-column: 1/4;
+	color:white;
+	text-align: left;
+	
 }
 
 
@@ -13,19 +16,24 @@ main{
 	grid-column:1/3;
 	background-color: gray;
 	color:orange;
+	text-align: left;
+	
 }
 
 aside{
 	grid-column:3/4;
 	background-color: navy;
+	text-align: left;
 }
+
 nav{
 	display: flex;
-	bacground-color: 	#36454F;
+	background-color: 	#36454F;
 }
 
 nav a{
 	flex: 1;
+	color: blue;
 }
 
 footer{
