--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -8,6 +8,7 @@ header{
 	grid-column: 1/4;
 	color:white;
 	text-align: left;
+	font-size: 2em;
 	
 }
 
@@ -17,6 +18,7 @@ main{
 	background-color: gray;
 	color:orange;
 	text-align: left;
+	font-size: 1em;
 	
 }
 
@@ -24,6 +26,7 @@ aside{
 	grid-column:3/4;
 	background-color: navy;
 	text-align: left;
+	font-size: 1em;
 }
 
 nav{
@@ -32,12 +35,14 @@ nav{
 }
 
 nav a{
-	flex: 1;
+	font-size: 0.6em;
+	flex: auto;
 	color: blue;
 }
 
 footer{
 	grid-column:1/4;
+	font-size: 1em;
 	background-color: black;
 	color: white;
 }
