--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -8,7 +8,7 @@ header{
 	grid-column: 1/4;
 	color:white;
 	text-align: left;
-	font-size: 20px;
+	font-size: 5px;
 	
 }
 
@@ -18,7 +18,7 @@ main{
 	background-color: gray;
 	color:orange;
 	text-align: left;
-	font-size: 15px;
+	font-size: 5px;
 	
 }
 
@@ -26,7 +26,7 @@ aside{
 	grid-column:3/4;
 	background-color: navy;
 	text-align: left;
-	font-size: 15px;
+	font-size: 5px;
 }
 
 nav{
@@ -34,10 +34,11 @@ nav{
 	justify-content: space-between;
 	width: 100%;
 	padding: 10px 20px; 
+	background-color: 	#36454F;
 }
 
 nav a{
-	font-size: 15px;
+	font-size: 5px;
 	color: white;
 	text-decoration: none;
 	flex-grow: 1;
@@ -46,7 +47,8 @@ nav a{
 
 footer{
 	grid-column:1/4;
-	font-size: 18px;
+	font-size: 5px;
 	background-color: black;
 	color: white;
+	text-align: center;
 }
