--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -36,7 +36,7 @@ nav{
 	display: flex;  
 	justify-content: space-between;
 	width: 100%;
-	padding: 10px 20px; 
+	padding: 1fr 1fr; 
 	background-color: 	#36454F;
 }
 
