--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -4,6 +4,7 @@ body{
 }
 
 header{
+	padding-left: 5px;
 	background-color: black;
 	grid-column: 1/4;
 	color:white;
@@ -14,6 +15,7 @@ header{
 
 
 main{
+	padding-left: 5px;
 	grid-column:1/3;
 	background-color: gray;
 	color:orange;
@@ -25,10 +27,12 @@ main{
 }
 
 aside{
+	padding-left: 5px;
 	grid-column:3/4;
 	background-color: navy;
 	text-align: left;
 	font-size: 5px;
+	color:white;
 
 }
 
@@ -36,7 +40,7 @@ nav{
 	display: flex;  
 	justify-content: space-between;
 	width: 100%;
-	padding: 10px 20vw; 
+	padding: 10px 18vw; 
 	background-color: 	#36454F;
 }
 
