--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -40,7 +40,7 @@ nav{
 	display: flex;  
 	justify-content: space-between;
 	width: 100%;
-	padding: 10px 19vw; 
+	padding: 10px. 18%; 
 	background-color: 	#36454F;
 }
 
