--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -43,8 +43,8 @@ nav{
 	display: flex;  
 	justify-content: space-between;
 	width: 100%;
-	padding: 10px. 19%; 
-	background-color: 	#36454F;
+	padding: 10px 19%; 
+	background-color: #36454F;
 }
 
 nav a{
