--- a/styles/base.css
+++ b/styles/base.css
@@ -1,9 +1,3 @@
-*{
-	margin: 0;
-	padding: 0;
-	/*box-sizing: border-box;*/
-}
-
 
 
 body{
@@ -15,37 +9,35 @@ header{
 	background-color: black;
 	grid-column: 1/4;
 	background-color: #bbb;
-	/* display: flex; */
-	/* align-items: center;
-	justify-content: center; */
 	padding: 20px;
-	/* border: 1px solid rgba(0, 0, 0, 0.1); */
 	color:white;
 	text-align: left;
 	font-size: 3px;
 }
 
 #first{
-	width:40px;
-	height: 60px;
+	display: inline-block;
+	
+	width:100px;
+	height: 150px;
 }
 
 #second{
+	display: inline;
+	position: abslute;
 	width: 40px;
 	height: 60px;
 }
 
 p{
   font-family: "Lobster", sans-serif;
-  font-weight: 200;
   font-style: normal;
 	font-size: 20px;
 }
 
 
-header h1{
+header{
 	font-size: 0.5em;
-	margin: 5px;
   font-family: "Nunito Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 200;
@@ -78,6 +70,7 @@ aside{
 
 .in{
 	float: left;
+	display: absolute;
 }
 
 .out{
@@ -88,7 +81,7 @@ nav{
 	display: flex;  
 	justify-content: space-between;
 	width: 100%;
-	padding: 10px 19%; 
+	padding: 10px auto; 
 	background-color: #36454F;
 }
 
