--- a/styles/base.css
+++ b/styles/base.css
@@ -19,7 +19,6 @@ header h1{
 	margin: 10px;
 }
 .card{
-	display: flex;
 	align-items: center;
 	justify-content: space-around;
 	margin: 5px;
@@ -76,9 +75,23 @@ aside{
 	align-content: center;
 }
 
+aside ul li {
+    margin-bottom: 10px; 
+}
+
+aside ul {
+    list-style: none;
+    padding: 0; 
+    margin: 0;   
+    text-align: center; 
+}
+
 .in{
+	display: inline;
+	margin: 0 auto;
 	width: auto;
 	height: auto;
+	float: left;
 	
 }
 
