--- a/styles/base.css
+++ b/styles/base.css
@@ -19,6 +19,7 @@ header{
 header h1{
 	font-size: 1em;
 	margin: 10px;
+	color:#36454F;
 	
 }
 .card{
@@ -39,7 +40,7 @@ header h1{
 	height: auto;
 }
 
-p{
+main section p{
   font-family: "Lobster", sans-serif;
   font-style: normal;
 	font-size: 10px;
@@ -79,7 +80,8 @@ aside{
 }
 
 aside ul li {
-    margin-bottom: 10px; 
+  margin-bottom: 15px;
+	color:white;
 }
 
 aside ul {
@@ -110,7 +112,7 @@ nav{
 }
 
 nav a{
-	font-size: 20px;
+	font-size: 10px;
 	flex-direction: column;
 	color: white;
 	text-decoration: none;
