--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,7 @@
 body{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
+	gap: 1em;
 }
 
 header{
@@ -25,7 +26,8 @@ header h1{
 .card{
 	align-items: center;
 	justify-content: space-around;
-	margin: 5px;
+	margin: 15px;
+	padding: 15px;
 }
 
 #first{
@@ -112,7 +114,7 @@ nav{
 }
 
 nav a{
-	font-size: 10px;
+	font-size: 0.7em;
 	flex-direction: column;
 	color: white;
 	text-decoration: none;
