--- a/styles/base.css
+++ b/styles/base.css
@@ -17,6 +17,11 @@ header{
 	align-items: center;
 }
 
+main section h2{
+	text-align: center;
+	fomt-size: 10px;
+}
+
 header h1{
 	font-size: 1em;
 	margin: 10px;
@@ -80,9 +85,10 @@ aside{
 	align-content: center;
 }
 
-aside ul li {
+aside ul li a{
   margin-bottom: 15px;
 	color:white;
+	fomt-size: 1em;
 }
 
 aside ul {
@@ -94,8 +100,9 @@ aside ul {
 }
 
 .in{
+	margin: 5px;
 	display: inline;
-	
+	fomt-size: 0.8em;
 	width: 50%;
 	height: auto;
 	float: left;
@@ -120,6 +127,7 @@ nav a{
 	text-decoration: none;
 	flex: 1;
 	text-align: center;
+	padding: 10px;
 }
 
 footer{
@@ -134,6 +142,7 @@ footer{
 
 nav a:hover {
 	text-decoration:overline;
+	color: white;
 }
 
 .active {
