--- a/styles/base.css
+++ b/styles/base.css
@@ -47,7 +47,7 @@ header h1{
 
 #second{
 	float:left;
-	width: 40%;
+	width: 10%;
 	height: auto;
 	margin-right: 5px;
 }
@@ -103,14 +103,14 @@ aside ul {
 	color:white;
 	list-style: none;
 	padding: 0;
-	margin: 0;
+	margin: 0 auto;
 	text-align: center; 
 	justifiy-items: space-around;
+	
 }
 
 .in{
 	margin: 5px;
-	display: inline;
 	font-size: 0.8em;
 	width: 50%;
 	height: auto;
