--- a/styles/base.css
+++ b/styles/base.css
@@ -75,7 +75,7 @@ main{
 	background-color: gray;
 	color:orange;
 	text-align: left;
-	font-size: 1rem;
+	font-size: 1.5em;
 	justify-content: space-around;
 	max-width: 1700px;
 	
