--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -2,12 +2,17 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+header{
+	background-color: black;
+	color: white;
+}
+
 header, main, footer {
 	max-width: 640px;
 	margin: 1rem auto;
 	border: 1px solid #bbb;
 	padding: 1rem;
-	background-color: #e6f2ff;
+	justify-itmes: center;
 }
 
 main {
@@ -15,9 +20,23 @@ main {
 	grid-template-columns: 1fr;
 	grid-gap: 1rem;
 	align-items:center;
+	bacground-color: orange;
 }
 
 section {
 	padding: 1rem;
 	background-color: #fff;
+}
+
+footer p{
+	font-size: 1rem;
+	text-align: left;
+}
+
+footer{
+	background-color: black;
+}
+
+main section p{
+	font-size: 0.8rem;
 }
