Made section grid

--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -26,12 +26,10 @@
 
     figure {
         width: calc(33.333% - 20px);
-        float: left;
     }
 
     section {
-        padding: 20px;
-        margin-bottom: 20px;
-        
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
