--- a/styles/temples.css
+++ b/styles/temples.css
@@ -33,6 +33,11 @@ nav ul li a {
     text-decoration: none;
 }
 
+nav ul li a:hover {
+    text-decoration: underline;
+    color: orange;
+}
+
 main {
     padding: 20px;
     max-width: 90%;
@@ -47,7 +52,7 @@ figure {
     width: 100%;
     text-align: center;
     justify-content: center;
-    
+    overflow: hidden;
 }
 
 figcaption {
