--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,7 +1,16 @@
-@media (min-width: 600px) {
+@media (min-width: 700px) {
 	.weather{
-		display: float;
-		float: right;
+		margin-top: 5px;
+		margin-right: 0px;
 		background-color: #f0f0ad0;
+	}
+	weather::after {
+    content: url('images/weather.svg');
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+}
+	main{
+		justify-items: stretch;
 	}
 }
