--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,7 +1,7 @@
 @media (min-width: 700px) {
 
 	.weath::after {
-    content: url('images/cloud.svg');
+    content: url('images/weather.svg');
     display: inline-block;
     width: 24px;
     height: 24px;
@@ -20,6 +20,6 @@
 	}
 	.data{
 		grid-column: 1/2;
-		margint-bottom: 70px;
+		margin-bottom: 70px;
 	}
 }
