--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -13,7 +13,10 @@
 		vertical-align: middle;
 	}
 
-	header 
+	header img{
+		max-width: 80%;
+		max-height: 80%;
+	}
 	section{
 		background-color: gray;
 	}
