--- a/project/styles/commerce.css
+++ b/project/styles/commerce.css
@@ -17,18 +17,15 @@ nav ul {
 	padding: 0;
 	display: flex;
 	justify-content: center;
-	
 }
 
 nav ul li {
 	margin: 0px 3rem;
-	
 }
 
 nav ul li a {
 	color: #fff;
 	text-decoration: none;
-	
 }
 
 footer {
@@ -43,16 +40,27 @@ footer {
 
 main {
 	padding: 20px;
+	padding-bottom: 60px; /* Ensure content is not hidden behind the footer */
 }
-
 
 .products, .cart, .product-details {
 	margin-top: 20px;
 }
 
-.products{
+.products, .product-details {
 	margin-bottom: 40px;
 }
+
+.product-details img {
+	text-align: center;
+	background-color: navy;
+	padding: 10px;
+	margin: 10px;
+	width: 100%;
+	max-width: 370px; /* Ensure the image doesn't exceed this width */
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 .product-list, .cart-items {
 	display: flex;
 	flex-wrap: wrap;
@@ -63,13 +71,20 @@ main {
 	background-color: #fff;
 	padding: 10px;
 	margin: 10px;
-	width: calc(25% - 5px);
+	
+	width: calc(25% - 20px); /* Adjust width to include margins */
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	object-fit: cover;
+	overflow: hidden;
+	}
 
 .product-item img, .cart-item img {
-	width: 100%;
 	height: 370px;
+	max-height: 370px; /* Limit the height to ensure consistency */
+	object-fit: cover;
 }
 
 .product-item h3, .cart-item h3 {
